--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-size: 12px;
+}
+
+.feedback{
+    position: absolute;
+    top: 0px;
+    right: 10px;
+}
+
+.feedback-icon{
+    text-align: right;
+    padding: 10px;
+}
+
+.feedback-box {
+    background: white;
+    border-radius: 50PX;
+    padding: 22px 0px;
+    -moz-box-shadow: 0 0 3px #ccc;
+    -webkit-box-shadow: 0 0 3px #ccc;
+    box-shadow: 0 0 19px grey;
+}
+
+.feedback-list{
+    list-style: none;
+    margin:0;
+    padding:0;
+}
+
+.feedback-item{
+    padding: 10px;
+}
+
+.backdrop{  
+    background-color:rgba(0,0,0,0.6);
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100vh;
+}
+
+.modal-body {
+    padding: 40px;
+}
+
+button.done {
+    background-color:#33ccff;
+    color:white;
+}
+    
